# DigitalTwinBuilder

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  frames.db  main.py  pyproject.toml  requirements.txt  run-python.slurm  vcpkg.json
DTlibrary/: agents.py  base_lib.py
benchmarks/: README.md  results_vv0.csv  simbench.py  simbench_run.sh
benchmarks/llm_judge/judge_results/: judge_results_baseline_turn1.json  judge_results_pairwise_turn1.json  judge_results_sllm_turn1.json
benchmarks/llm_judge/llm_judge_input/: jllm_input_turn1_vv0.json  jllm_input_turn2_vv0.json  jllm_input_turn3_vv0.json  pairwise_turn1.json  pairwise_turn1.txt  pairwise_turn2.json  pairwise_turn2.txt  pairwise_turn3.json  pairwise_turn3.txt  pointwise_baseline_turn1.json  pointwise_baseline_turn1.txt  pointwise_baseline_turn2.json  pointwise_baseline_turn2.txt  pointwise_baseline_turn3.json  pointwise_baseline_turn3.txt  pointwise_sllm_turn1.json  pointwise_sllm_turn1.txt  pointwise_sllm_turn2.json  pointwise_sllm_turn2.txt  pointwise_sllm_turn3.json  pointwise_sllm_turn3.txt  simbench_input_turn1_v0.json  simbench_input_turn2_v0.json  simbench_input_turn3_v0.json
benchmarks/model_inputs/: steel_text_v0.txt
benchmarks/test_bench/: README.md  claude_code.py  deepseek_code.py  gemini_code.py  gpt_code.py  qwen_code.py  results.md  run_test.sh  task.md  tests.py  ya_gpt_code.py
code_models/: infer.sh
code_models/pychrono-llama-3.1/: download.py  infer.py
code_models/qwen3-coder-30b/: download.py  infer.py
code_models/starcoder-7b/: download.py  infer.py
conversation_logs/: requirements_logs.json  score_db.csv  score_requirements.csv  scores.csv
database_manager/: main.py
docs/: workflow.md
drift_lib/: README.md  __init__.py  embedding_model.py  json_dataset.py  mmd_numpy.py  online_mmd_detector.py  requirements.txt
drift_lib/db/: pg_insert_example.py  schema.sql
drift_lib/scripts/: dialog_drift_scan.py  smoke_drift_from_json.py  smoke_drift_no_db.py
ipcamera/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  build.sh  vcpkg.json
ipcamera/src/: CMakeLists.txt  main.cpp  main2.cpp
ipcamera/src/camera/: CMakeLists.txt
ipcamera/src/camera/gige/: CMakeLists.txt  client.cpp  client.hpp
ipcamera/src/camera/gige/gvcp/: CMakeLists.txt  ack.cpp  ack.hpp  client.cpp  client.hpp  command.cpp  command.hpp  registers.hpp  status.hpp  status_codes.hpp
ipcamera/src/camera/gige/gvsp/: CMakeLists.txt  client.cpp  client.hpp  payload.cpp  payload.hpp  pixel_formats.hpp
ipcamera/src/camera/rtsp/: client.cpp
ipcamera/src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
ipcamera/test/: CMakeLists.txt
ipcamera/test/camera/: CMakeLists.txt
nemotron/: download.py
pychrono_results/: digital_twin_simulation-2.py
readme_en/: README_EN.md
sensors/: level_sensor.py  rfid_sensor.py  temperature_sensor.py  wear_sensor.py
slurm/: agent1.slurm  agent2.slurm  agent3.slurm  agents.slurm  monitor_agents.sh  start-agents.sh  stop-agents.sh
sql/: init.sql
src/: CMakeLists.txt  main.cpp
src/camera/: CMakeLists.txt
src/camera/rtsp/: CMakeLists.txt  client.cpp  client.hpp
src/digital_twin_builder/: __init__.py  agents_starter.py  api-server.py  api_utils.py  config.py  database.py  streamlit-app.py
src/digital_twin_builder/DTlibrary/: __init__.py  agents.py  base_lib.py  langgraph_flow.py  llm.py  main.py  requirements.txt   translations.py  web_interface.py
src/digital_twin_builder/agents/: __init__.py  database_agent.py  digital_twin_agent.py  digital_twin_agent_local.py  user_interaction_agent.py
src/digital_twin_builder/database_manager/: __init__.py  append.py  trigger.py
src/digital_twin_builder/ipcamera/: Dockerfile  __init__.py  healthcheck.sh  pyproject.toml
src/digital_twin_builder/ipcamera/cpp/: CMakeLists.txt  Dockerfile  Readme.md  vcpkg.json
src/digital_twin_builder/ipcamera/cpp/bindings/: CMakeLists.txt
src/digital_twin_builder/ipcamera/cpp/bindings/camera/: CMakeLists.txt  bindings.cpp
src/digital_twin_builder/ipcamera/cpp/bindings/camera/gige/: CMakeLists.txt  bindings.cpp
src/digital_twin_builder/ipcamera/cpp/bindings/camera/gige/gvcp/: CMakeLists.txt  bindings.cpp
src/digital_twin_builder/ipcamera/cpp/bindings/camera/gige/gvsp/: CMakeLists.txt  bindings.cpp
src/digital_twin_builder/ipcamera/cpp/bindings/camera/rtsp/: CMakeLists.txt  bindings.cpp
src/digital_twin_builder/ipcamera/cpp/python/ipcamera/: __init__.py
src/digital_twin_builder/ipcamera/cpp/python/ipcamera/camera/: __init__.py
src/digital_twin_builder/ipcamera/cpp/python/ipcamera/camera/gige/: __init__.py
src/digital_twin_builder/ipcamera/cpp/python/ipcamera/camera/gige/gvcp/: __init__.py
src/digital_twin_builder/ipcamera/cpp/python/ipcamera/camera/gige/gvsp/: __init__.py
src/digital_twin_builder/ipcamera/cpp/src/: CMakeLists.txt  main.cpp
src/digital_twin_builder/ipcamera/cpp/src/camera/: CMakeLists.txt  client.cpp  client.hpp
src/digital_twin_builder/ipcamera/cpp/src/camera/gige/: CMakeLists.txt  client.cpp  client.hpp
src/digital_twin_builder/ipcamera/cpp/src/camera/gige/gvcp/: CMakeLists.txt  ack.cpp  ack.hpp  client.cpp  client.hpp  command.cpp  command.hpp  registers.hpp  status_codes.hpp
src/digital_twin_builder/ipcamera/cpp/src/camera/gige/gvsp/: CMakeLists.txt  client.cpp  client.hpp  payload.cpp  payload.hpp  pixel_formats.hpp  traits.cpp  traits.hpp
src/digital_twin_builder/ipcamera/cpp/src/camera/rtsp/: CMakeLists.txt  client.cpp  client.hpp
src/digital_twin_builder/ipcamera/cpp/src/utils/: CMakeLists.txt  utils.hpp
src/digital_twin_builder/ipcamera/cpp/test/camera/rtsp/: CMakeLists.txt
src/digital_twin_builder/prompts/: system.py  user.py
src/digital_twin_builder/sensors/: __init__.py  pressure_sensor.py
tests/: api-test.py
tests/agents/: deep_json_eval.py  judge_llm_eval.py  llm-responder.py
tests/agents/jsons/: db_schema.json  requirements.json  requirements_schema.json  sql.json
tests/agents/ui/: append-tests.sh  llm-responder.py  (+2 more)
yolo/: main.py
(+38 files in other folders)
